# modern-drf-swagger

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  SETUP_COMPLETE.md  USAGE.md  architecture.md  pyproject.toml
.github/: copilot-instructions.md
.github/prompts/: plan-djangoApiPortal.prompt.md
.github/workflows/: publish-pypi.yml
api_portal/: __init__.py  admin.py  apps.py  conf.py  models.py  urls.py
api_portal/migrations/: 0001_initial.py
api_portal/permissions/: endpoint_permissions.py
api_portal/services/: analytics_service.py  request_executor.py  schema_loader.py
api_portal/static/api_portal/css/: styles.css
api_portal/static/api_portal/js/: analytics.js  docs.js  endpoint-list.js  history.js  request-editor.js  response-viewer.js
api_portal/templates/api_portal/: analytics.html  base.html  docs.html  history.html  login.html
api_portal/views/: analytics_view.py  api_proxy_view.py  auth_view.py  docs_view.py
docs/: API_PORTAL_TITLE_FIX.md  AUTO_CONFIGURATION_GUIDE.md  AUTO_CONFIGURATION_IMPLEMENTATION.md  BUG_FIXES.md  CODE_GENERATION.md  IMPLEMENTATION_SUMMARY.md  PYPI_PUBLISHING.md  THEME_IMPLEMENTATION.md  THEME_UPDATES.md  VERIFICATION_GUIDE.md  VISUAL_GUIDE.md
images/: README.md
modern_drf_swagger/: __init__.py  admin.py  apps.py  conf.py  models.py  signals.py  urls.py
modern_drf_swagger/management/: __init__.py
modern_drf_swagger/management/commands/: clear_permission_cache.py  list_permissions.py
modern_drf_swagger/migrations/: 0001_initial.py
modern_drf_swagger/permissions/: endpoint_permissions.py
modern_drf_swagger/services/: analytics_service.py  code_generator.py  request_executor.py  schema_loader.py
modern_drf_swagger/static/modern_drf_swagger/css/: styles.css
modern_drf_swagger/static/modern_drf_swagger/js/: analytics.js  code-generator.js  docs.js  global-auth.js  history.js  request-editor.js  response-viewer.js
modern_drf_swagger/templates/modern_drf_swagger/: analytics.html  base.html  docs.html  history.html  login.html
modern_drf_swagger/views/: analytics_view.py  api_proxy_view.py  auth_view.py  code_generation_view.py  docs_view.py
sample_project/: setup_test_data.py  test_portal_titles.py
sample_project/api/: __init__.py  admin.py  models.py  serializers.py  views.py
sample_project/api/migrations/: 0001_initial.py
sample_project/config/: asgi.py  settings.py  urls.py  wsgi.py
sample_project/sample_project/: settings.py
samples/: README.md  requirements.txt  setup_test_data.py
samples/api/: admin.py  models.py  serializers.py  urls.py  views.py
samples/api/migrations/: 0001_initial.py  0002_task_file.py
samples/config/: settings.py  urls.py
scripts/: build.sh
tests/: test_endpoint_permissions.py  test_list_permissions_command.py  test_request_executor.py  test_schema_loader.py
