[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modern-drf-swagger"
version = "1.0.0"
authors = [
  { name="DavronbekDev", email="davronbekboltyev777@gmail.com" },
]
description = "A modern API developer portal for Django REST Framework projects."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["django", "rest-framework", "api", "swagger", "openapi", "documentation", "portal"]
dependencies = [
    "django>=3.2",
    "djangorestframework>=3.12",
    "drf-spectacular>=0.26",
    "requests>=2.25.0"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
"Homepage" = "https://github.com/firdavsDev/modern-drf-swagger"
"Documentation" = "https://github.com/firdavsDev/modern-drf-swagger#readme"
"Bug Tracker" = "https://github.com/firdavsDev/modern-drf-swagger/issues"
"Source Code" = "https://github.com/firdavsDev/modern-drf-swagger"
"Author Website" = "https://davronbek.dev"

[tool.setuptools]
packages = ["api_portal", "api_portal.migrations", "api_portal.permissions", "api_portal.services", "api_portal.views"]
include-package-data = true

[tool.setuptools.package-data]
api_portal = ["templates/**/*", "static/**/*"]
