[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modern-drf-swagger"
version = "1.0.5"
authors = [
  { name="DavronbekDev", email="davronbekboltyev777@gmail.com" },
]
description = "A modern API developer portal for Django REST Framework projects."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["django", "rest-framework", "api", "swagger", "openapi", "documentation", "portal"]
dependencies = [
    "django>=3.2",
    "djangorestframework>=3.12",
    "drf-spectacular>=0.26",
    "requests>=2.25.0"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
"Homepage" = "https://github.com/firdavsDev/modern-drf-swagger"
"Documentation" = "https://github.com/firdavsDev/modern-drf-swagger#readme"
"Bug Tracker" = "https://github.com/firdavsDev/modern-drf-swagger/issues"
"Source Code" = "https://github.com/firdavsDev/modern-drf-swagger"
"Author Website" = "https://davronbek.dev"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["modern_drf_swagger*"]
exclude = ["modern_drf_swagger.static*", "modern_drf_swagger.templates*"]

[tool.setuptools.package-data]
modern_drf_swagger = ["templates/**/*", "static/**/*"]

[tool.isort]
profile = "black"
line_length = 120
skip_glob = [
    "*/migrations/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/env/*",
    "*.egg-info/*",
    "*/build/*",
    "*/dist/*",
]
known_django = ["django"]
known_first_party = ["modern_drf_swagger"]
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
